--- a/style.css
+++ b/style.css
@@ -3,3 +3,25 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  text-align: center;
+}
+
+a {
+  padding: 10px;
+  background-color: grey;
+}
+
+figcaption {
+  font-size: 12px;
+}
+
+#featured-property {
+  width: 800px;
+  text-align: center;
+}
