--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ figcaption {
 }
 
 div #details {
-  float:left;
+  float: left;
+}
+
+div {
+  background: blue;
+  text-align: center;
+  width: 25%;
 }
 
