--- a/style.css
+++ b/style.css
@@ -31,12 +31,12 @@ figcaption {
 
 }
 
-div {
+div #details {
   float: left;
 }
 
 div {
-  background: red;
+  background: blue;
   text-align: center;
   width: 25%;
 }
